--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,15 @@
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
         "picqer/php-barcode-generator": "^2.2",
-        "psr/simple-cache": "2.0"
+        "psr/simple-cache": "2.0",
+        "symfony/http-client": "^6.0",
+        "symfony/mailgun-mailer": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.13",
         "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
+        "laravel/sail": "^1.16",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
